[package]
name = "url_open"
version = "0.0.1"
edition = "2021"
description = "Open URLs in the default browser"
documentation = "https://docs.rs/url_open"
repository = "https://github.com/fschutt/url_open"
license = "MIT"
keywords = ["url", "browser"]
categories = ["api-bindings", "os"]

[dependencies]
url = "2.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["shellapi"] }
