[package]
name = "url_open"
version = "0.1.0"
edition = "2021"
description = "Open URLs in the default browser"
documentation = "https://docs.rs/url_open"
repository = "https://github.com/fschutt/url_open"
license = "MIT"
keywords = ["url", "browser"]
categories = ["api-bindings", "os"]

[dependencies]
url = "2.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
